--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <resources>
     <dimen name="button_margin">20dp</dimen>
     <dimen name="header_height">50dp</dimen>
+    <dimen name="form_padding">20dp</dimen>
+    <dimen name="button_corner">10dp</dimen>
 </resources>
