--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/button_margin" />
+        android:layout_margin="@dimen/button_margin"
+        android:backgroundTint="@color/colorPrimary" />
 
 </RelativeLayout>
