--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -13,6 +13,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/new_item"
+        android:src="@drawable/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
