--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -17,13 +17,28 @@
             android:background="@color/colorPrimary"
             android:elevation="4dp" />
 
-        <EditText
-            android:id="@+id/note_title"
-            style="@style/edit_text_transparent"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/title"
-            android:padding="@dimen/form_padding" />
+            android:layout_height="wrap_content">
+
+            <View
+                android:id="@+id/indicator"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_margin="10dp"
+                android:background="@android:color/darker_gray" />
+
+            <EditText
+                android:id="@+id/note_title"
+                style="@style/edit_text_transparent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/title"
+                android:padding="@dimen/form_padding" />
+
+        </RelativeLayout>
 
         <EditText
             android:id="@+id/note_content"
@@ -33,6 +48,7 @@
             android:gravity="top"
             android:hint="@string/your_note_content_goes_here"
             android:padding="@dimen/form_padding" />
+
 
     </LinearLayout>
 
